--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
   "version": 2,
-  "builds": [{ "src": "index.html", "use": "@vercel/static-build" }],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
